Elastic: Fix opacity on disabled custom checkboxes in dark mode

--- a/skins/elastic/styles/widgets/forms.less
+++ b/skins/elastic/styles/widgets/forms.less
@@ -1288,6 +1288,7 @@ html.ms .propform {
 
     .custom-control-input {
         left: 0;
+        opacity: 0 !important; // fixes input in dark mode
 
         &:focus ~ .custom-control-label:before {
             box-shadow: 0 0 0 .2rem @color-checkbox-focus-shadow;
